--- a/platforms/ios/www/index.html
+++ b/platforms/ios/www/index.html
@@ -307,5 +307,6 @@ window.onload = function() {initialize();nombrePhotos();setInterval(nombrePhotos
 <script src="http://www.appliseeit.com/mobile/hammer_fonctions.js"></script>
         <script type="text/javascript" src="cordova.js"></script>
         <script type="text/javascript" src="js/index.js"></script>
+        <script type="text/javascript" src="js/onorientationchange.js"></script>
 </body>
 </html>
