--- a/platforms/android/assets/www/index.html
+++ b/platforms/android/assets/www/index.html
@@ -25,6 +25,25 @@
 
 
 <script type="text/javascript">
+  function listenerTailleEcran(requeteMedia) {
+	var orientationPortrait = document.getElementById('orientationPortrait');
+	if (requeteMedia.matches) {  
+        alert('portrait');
+      	//document.getElementById('photoaccueil_1').offsetWidth = 45%;
+	} else {  
+        alert('landscape');
+	//document.getElementById('photoaccueil_1').offsetWidth = 65 %;  
+	}
+}  
+	
+document.addEventListener('DOMContentLoaded', function(){
+	var requeteMedia = window.matchMedia("(orientation : portrait)");
+	requeteMedia.addListener(listenerTailleEcran);
+	
+	listenerTailleEcran(requeteMedia);
+}, false);
+
+
 //INITIALIZE GOOGLE MAP
 var geocoder;
 function initialize() {
