--- a/platforms/android/assets/www/index.html
+++ b/platforms/android/assets/www/index.html
@@ -42,7 +42,7 @@ window.onload = function() {initialize();nombrePhotos();setInterval(nombrePhotos
 <table><tr><td><img src="http://www.appliseeit.com/mobile/image/pull-to-refresh-arrow.png" align="center"></td><td><font color=grey size=2> Chargement en cours...</font></td></tr></table>
 </div>
 <div align="center"><font size='2' color='grey'>Les photos les plus r&eacute;centes</font></div>
-<div data-dojo-type="dojox/mobile/Container" style="background-color:#758DA7;height:300px;">
+<div data-dojo-type="dojox/mobile/Container" id="containerAccueil" style="background-color:#758DA7;height:300px;">
 <div data-dojo-type="dojox/mobile/PageIndicator" ></div>
 <div data-dojo-type="dojox/mobile/SwapView">
 <img src="http://www.appliseeit.com/public/images/icone-seeit.png" style="width:250px;display: block;margin-left: auto;margin-right: auto" />
