--- a/platforms/android/assets/www/index.html
+++ b/platforms/android/assets/www/index.html
@@ -20,17 +20,28 @@
 <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/dojo/1.10.4/dojox/mobile/deviceTheme.js" data-dojo-config="mblThemeFiles: ['base','Accordion']"></script>
 <script src="http://ajax.googleapis.com/ajax/libs/dojo/1.10.4/dojo/dojo.js"></script>
 <script type="text/javascript" src="js/dojox.js"></script>
+<script src='http://websocket-seeit.rhcloud.com:8000/socket.io/socket.io.js'></script>
 <link rel="stylesheet" href="css/camera.css" type="text/css">
 
 
 
 <script type="text/javascript">
-//INITIALIZE GOOGLE MAP
 var geocoder;
 function initialize() {
 geocoder = new google.maps.Geocoder();
+socket = io.connect('http://websocket-seeit.rhcloud.com:8000');
+	socket.on('connect', function () {
+        alert('You are connected to Server');
+         });  
+        socket.on('newConnection', function (data) {
+        alert(data);
+        });  
+        socket.on('newPhoto', function (data) {
+        alert(data);
+        });  
 }
-window.onload = function() {initialize();nombrePhotos();setInterval(nombrePhotos, 10000);};
+
+window.onload = function() {initialize();nombrePhotos();};
 </script>
 </head>
 <body style="visibility:hidden;">
