--- a/platforms/android/assets/www/index.html
+++ b/platforms/android/assets/www/index.html
@@ -42,6 +42,9 @@ ws.onmessage = function (event) {
        case "confirmation message":
            alert(data.message);
            break;
+       case "confirmation ouvrir appareil photo":
+          onCapture();
+           break;
     }
 };
 
@@ -50,7 +53,7 @@ var data = { "type" : "envoi photo", "message" : "" };
 var message = JSON.stringify(data);
 ws.send(message);}
 
-function initialize() {alert('initialize');
+function initialize() {
 geocoder = new google.maps.Geocoder();
 }
 
