--- a/platforms/android/assets/www/index.html
+++ b/platforms/android/assets/www/index.html
@@ -38,7 +38,8 @@ ws.onmessage = function (event) {
            break;
        case "confirmation photo":
            alert("Un utilisateur vient de prendre une photo à " + data.lieu);
-           if(document.getElementById("alertSonVibration").value=='on'){navigator.vibrate([100, 100, 100, 100, 100]);navigator.notification.beep(1);}
+           //if(document.getElementById("alertSonVibration").value=='on'){navigator.vibrate([100, 100, 100, 100, 100]);navigator.notification.beep(1);}
+           navigator.vibrate([100, 100, 100, 100, 100]);navigator.notification.beep(1);
            break;
        case "confirmation message":
            alert(data.message);
