--- a/platforms/android/assets/www/index.html
+++ b/platforms/android/assets/www/index.html
@@ -38,7 +38,7 @@ ws.onmessage = function (event) {
        sessionStorage.id = id;
            alert("Connexion d'un nouvel utilisateur ! "+sessionStorage.id );
            break;
-ase "confirmation photo":
+	case "confirmation photo":
        	if (data.id != sessionStorage.id){
        	    alert("Nouvelle photo prise à " + data.lieu);
            //if(document.getElementById("alertSonVibration").value=='on'){navigator.vibrate([100, 100, 100, 100, 100]);navigator.notification.beep(1);}
