--- a/platforms/android/assets/www/index.html
+++ b/platforms/android/assets/www/index.html
@@ -70,7 +70,7 @@ window.onload = function() {initialize();nombrePhotos();setInterval(nombrePhotos
 
 <!--------------------------------------------------------------ACCUEIL---------------------------------------------------------------->
 <div id='tabViewAccueil' data-dojo-type='dojox/mobile/ScrollableView' selected="true">
-<h1 data-dojo-type="dojox/mobile/Heading" data-dojo-props="fixed: 'top'">SeeIt !</h1><br>
+<h1 data-dojo-type="dojox/mobile/Heading" data-dojo-props="fixed: 'top'">SeeIt ! Des Moments à Partager</h1><br>
 <div id="pull1" style="position: absolute;height: 65px; top: -65px;" align="center">
 <table><tr><td><img src="http://www.appliseeit.com/mobile/image/pull-to-refresh-arrow.png" align="center"></td><td><font color=grey size=2> Chargement en cours...</font></td></tr></table>
 </div>
