--- a/platforms/android/assets/www/index.html
+++ b/platforms/android/assets/www/index.html
@@ -40,9 +40,9 @@ ws.onmessage = function (event) {
            break;
 	case "confirmation photo":
        	if (data.id != sessionStorage.id){
-           navigator.vibrate([100, 100, 100, 100, 100]);navigator.notification.beep(1);
+           //navigator.vibrate([100, 100, 100, 100, 100]);navigator.notification.beep(1);
+       	   if(document.getElementById("alertSonVibration").value=='on'){navigator.vibrate([100, 100, 100, 100, 100]);navigator.notification.beep(1);}
        	   alert("Nouvelle photo prise " + data.lieu);
-           //if(document.getElementById("alertSonVibration").value=='on'){navigator.vibrate([100, 100, 100, 100, 100]);navigator.notification.beep(1);}
        	}
            break;
        case "confirmation message":
