--- a/platforms/android/assets/www/index.html
+++ b/platforms/android/assets/www/index.html
@@ -203,10 +203,10 @@ window.onload = function() {initialize();nombrePhotos();setInterval(nombrePhotos
 <li data-dojo-type="dojox/mobile/ListItem" data-dojo-props="">Enregistrer dans l'appareil
 <div data-dojo-type="dojox/mobile/Switch" data-dojo-props="onStateChanged:function(newStateEnregistrerPhoto){changeEnregistrerPhoto(newStateEnregistrerPhoto)}" value="off"></div>
 <li data-dojo-type="dojox/mobile/ListItem" data-dojo-props="rightText:'Nofications'"></li>
-<li data-dojo-type="dojox/mobile/ListItem" data-dojo-props="">Son/Vibration
-<div data-dojo-type="dojox/mobile/Switch" data-dojo-props="onStateChanged:function(newStateAlertSonVibration){}" value="off" id="alertSonVibration"></div>
-<li data-dojo-type="dojox/mobile/ListItem" data-dojo-props="">Reconnaissance Vocale
-<div data-dojo-type="dojox/mobile/Switch" data-dojo-props="onStateChanged:function(){Voix();}" value="off"></div>
+<li data-dojo-type="dojox/mobile/ListItem" data-dojo-props="" style="background-color:white;color:black;font-size:16px">Nouvelles photos
+<div data-dojo-type="dojox/mobile/Switch" data-dojo-props="onStateChanged:function(newStateAlertSonVibration){AlertSonVibration(newStateAlertSonVibration);}" value="off" id="alertSonVibration"></div>
+<li data-dojo-type="dojox/mobile/ListItem" data-dojo-props="" style="background-color:white;color:black;font-size:16px">Nouvelles connexions
+<div data-dojo-type="dojox/mobile/Switch" data-dojo-props="onStateChanged:function(newStateAlertNouvelleConnexion){AlertNouvelleConnexion(newStateAlertNouvelleConnexion);}" value="off" id="alertNouvelleConnexion"></div>
 </li>
 <div data-dojo-type="dojox/mobile/Accordion" >
 <div data-dojo-type="dojox/mobile/ContentPane" data-dojo-props='label:"Th&ecirc;mes"'>
