--- a/platforms/android/assets/www/index.html
+++ b/platforms/android/assets/www/index.html
@@ -301,6 +301,29 @@ window.onload = function() {initialize();nombrePhotos();setInterval(nombrePhotos
 <li data-dojo-type="dojox/mobile/TabBarButton" data-dojo-props='iconPos1:"0,116,29,29", iconPos2:"29,116,29,29", moveTo:"tabViewUpdates", onClick:function(){CacherCamera()}'>Infos</li>
 </ul>
 
+<!--------------------------------------------------------------DIALOGS---------------------------------------------------------------->
+<div id="dlg_connexion" data-dojo-type="dojox/mobile/SimpleDialog" data-dojo-props='closeButton:true'>
+  <div class="mblSimpleDialogTitle">Bienvenue</div>
+  <div class="mblSimpleDialogText">au nouvel utilisateur !</div>
+ </div>
+
+<div id="dlg_photo" data-dojo-type="dojox/mobile/SimpleDialog" data-dojo-props='closeButton:true'>
+  <div class="mblSimpleDialogTitle">La photo du jour</div>
+	  <img alt="" src="http://www.appliseeit.com/mobile/photos/1967_46.jpg"  width="200">
+  <div class="mblSimpleDialogText" id="textNbPhotosEnLigne"></div>
+</div>
+
+<div id="dlg_message" data-dojo-type="dojox/mobile/SimpleDialog" data-dojo-props='closeButton:true'>
+  <div class="mblSimpleDialogTitle">Message</div>
+  <div class="mblSimpleDialogText" id="textMessageWebsocket"></div>
+ </div>
+ 
+ <div id="dlg_nouvelle_photo" data-dojo-type="dojox/mobile/SimpleDialog" data-dojo-props='closeButton:true'>
+  <div class="mblSimpleDialogTitle">Nouvelle photo</div>
+  <div class="mblSimpleDialogText" id="textNouvellePhoto"></div>
+ </div>
+
+
 <script src="http://www.appliseeit.com/mobile/hammer_fonctions.js"></script>
         <script type="text/javascript" src="cordova.js"></script>
         <script type="text/javascript" src="js/index.js"></script>
